<resources>
    <string name="app_name">MyNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_accelerometer">Accelerometer Activity</string>
    <string name="menu_gyroscope">Gyroscope_Activity</string>
    <string name="menu_proximity">Proximity Activity</string>
    <string name="menu_shake">Shake Activity</string>
    <string name="menu_map">Map Activity</string>
    <string name="menu_data">Gyroscope Data Activity</string>
</resources>
