<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Accelerometer"
            android:icon="@drawable/ic_menu_accelerometer"
            android:title="@string/menu_accelerometer" />
        <item
            android:id="@+id/nav_gyroscope"
            android:icon="@drawable/ic_menu_gyroscope"
            android:title="@string/menu_gyroscope" />
        <item
            android:id="@+id/nav_proximity"
            android:icon="@drawable/ic_menu_proximity"
            android:title="@string/menu_proximity" />
        <item
            android:id="@+id/nav_shake"
            android:icon="@drawable/ic_menu_shake"
            android:title="@string/menu_shake" />
    </group>

            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_menu_map"
                android:title="@string/menu_map" />
            <item
                android:id="@+id/nav_data"
                android:icon="@drawable/ic_menu_data"
                android:title="@string/menu_data" />


</menu>
